--- a/数据库分析.md
+++ b/数据库分析.md
@@ -6,7 +6,7 @@
 
   | 字段 | 数据类型 | 默认值 | 能否为空 | 备注|
    --- | --- | --- | --- | --- | --- 
-  | UserID | 字符串 | null | 非空 | 微信服务器给出
+  | UserID | 字符串 | null | 非空 | 微信服务器给出|
   | UserName | 字符串 | null | 非空 | 
   | JoinDate | 时间 | null | 非空 | 
 
@@ -14,18 +14,18 @@
 
   | 字段 | 数据类型 | 默认值 | 能否为空 | 备注|
    --- | --- | --- | --- | --- | --- 
-  | GroupID | 字符串 | null | 非空 | 由代码自动生成
+  | GroupID | 字符串 | null | 非空 | 由代码自动生成 |
   | GroupName | 字符串 | null | 非空 | 
   | CreateDate | 时间 | null | 非空 | 
-  | GroupLord | 字符串 | null | 非空 | 群主ID
+  | GroupLord | 字符串 | null | 非空 | 群主ID|
 
 * 参加
 
   | 字段 | 数据类型 | 默认值 | 能否为空 | 备注|
    --- | --- | --- | --- | --- | --- 
-  | ParticipationID | 字符串 | null | 非空 | 由代码自动生成
-  | GroupID | 字符串 | null | 非空 | 外键
-  | UserID | 字符串 | null | 非空 | 外键
+  | ParticipationID | 字符串 | null | 非空 | 由代码自动生成|
+  | GroupID | 字符串 | null | 非空 | 外键|
+  | UserID | 字符串 | null | 非空 | 外键|
   | ParticipationDate | 时间 | null | 非空 | 
 
 ### 定义接口信息
