更改数据库和部分接口的说明

--- a/数据库分析.md
+++ b/数据库分析.md
@@ -15,9 +15,10 @@
   | 字段 | 数据类型 | 默认值 | 能否为空 | 备注|
   | --- | --- | --- | --- | --- |
   | GroupID | 字符串 | null | 非空 | 由代码自动生成 |
-  | GroupName | 字符串 | null | 非空 | 
-  | CreateDate | 时间 | null | 非空 | 
+  | GroupName | 字符串 | null | 非空 |
+  | SectionTag | 字符串 | null | 非空 | 
   | GroupLord | 字符串 | null | 非空 | 群主ID|
+  | CreateDate | 时间 | null | 非空 | 
 
 * 参加
 
@@ -27,6 +28,13 @@
   | GroupID | 字符串 | null | 非空 | 外键|
   | UserID | 字符串 | null | 非空 | 外键|
   | ParticipationDate | 时间 | null | 非空 | 
+
+* 热门分区
+
+  | 字段 | 数据类型 | 默认值 | 能否为空 | 备注|
+  | --- | --- | --- | --- | --- | 
+  | sectionID | 数值 | null | 非空 | 由代码自动生成|
+  | sectionTag | 字符串 | null | 非空 |  |
 
 ### 定义接口信息
 
@@ -38,6 +46,7 @@
       {
        "groupName" : "...",
         "UserName" : "...",
+        "sectionTag" : "分组的标签（需要用户创建时填写）",
         "Date" : "yyyy-MM-dd"
       }
       ```
@@ -67,28 +76,64 @@
       }
       ```
 
-3. /getGroup?id=
+3. /getGroups
 
-    * method: get
-    * 需要发送的数据格式: url参数\
-      /getGroup?id="需要请求的小组ID"
+    * method: post
+    * 需要发送的数据格式:
+       ```json
+      {
+        "section_id": "section_id",
+        "start_id": 0,
+        "limit": 10 // 限制了一次加载十个小组的信息进行显示
+      }
+      ```
     * 接收到的数据格式
       ```json
       {
-       "groupName" : "...",
-       "groupMembers" : ""
+       "groupNumber" : "正整数",
+       "groups" : [
+         {
+           "groupID" : "",
+          "groupName" : "",
+          "groupMembers" : ""
+         }
+         {
+           "groupID" : "",
+          "groupName" : "",
+          "groupMembers" : ""
+         }
+         ...
+       ]
+       
       }
       ```
 
-4. /getUserInfo
+4. /groups/hot
+
+  * 需要发送的信息 \
+    {}
+
+  * 接收到的信息
+    ```json
+      {
+        "section_num": "int_number",
+        "sections": [
+          "",
+          "",
+          ...
+        ]
+      }
+      ```  
+
+5. /getGroup?id=
 
     * method: get
-    * 需要发送的数据格式: url参数\
-      /getGroup?id="需要请求的用户ID"
+    * 需要发送的数据格式: \
+      url 的参数 id
     * 接收到的数据格式
-      ```json
-      {
-       "userID" : "...",
-       "userName" : ""
-      }
-      ```
+       ```json
+        {
+          "groupID" : "",
+          "groupName" : "",
+          "groupMembers" : ""
+        }
